--- a/preload-paradox/fix.html
+++ b/preload-paradox/fix.html
@@ -9,17 +9,15 @@
 </head>
 
 <body>
-    <h1><a href="./fix.html">Go to "fixed" version</a></h1>
+    <h1><a href="./index.html">Go to "problematic" version</a></h1>
     <img src="https://placehold.co/400x600" alt="This is LCP" width="400px" height="600px" />
-    <script async src="./script.js"></script>
-
-    <!-- <script>
+    <script>
         (function () {
             const s = document.createElement('script');
             s.setAttribute('src', './script.js');
             setTimeout(() => document.body.appendChild(s), 400);
         })()
-    </script> -->
+    </script>
 </body>
 
 </html>
