--- a/preload-paradox/fix.html
+++ b/preload-paradox/fix.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1><a href="./index.html">Go to "problematic" version</a></h1>
-    <img src="https://placehold.co/400x600" alt="This is LCP" width="400px" height="600px" />
+    <img src="./img.avif" alt="This is LCP" width="400px" height="600px" />
     <script>
         (function () {
             const s = document.createElement('script');
