--- a/preload-paradox/index.html
+++ b/preload-paradox/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1><a href="./fix.html">Go to "fixed" version</a></h1>
-    <img src="./img.avif" alt="This is LCP" width="400px" height="600px" />
+    <img src="./img.jpg" alt="This is LCP" width="400px" height="600px" />
     <script async src="./script.js"></script>
 
     <!-- <script>
