--- a/preload-paradox/index.html
+++ b/preload-paradox/index.html
@@ -12,7 +12,8 @@
     <h1><a href="./fix.html">Go to "fixed" version</a></h1>
     <img src="./img.jpg" alt="This is LCP" width="400px" height="600px" />
     <script async src="./script.js"></script>
-
+    <script async src="./script2.js"></script>
+    <script async src="./script3.js"></script>
     <!-- <script>
         (function () {
             const s = document.createElement('script');
